--- a/package.json
+++ b/package.json
@@ -3,6 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./components": {
+      "import": "./dist/Components.es.js",
+      "types": "./dist/Components.d.ts"
+    },
+    "./style.css": {
+      "import": "./dist/style.css"
+    }
+  },
+  "module": "dist/index.es.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc && vite build",
@@ -10,14 +27,18 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "memfs": "^4.8.0",
-    "vite-plugin-node-polyfills": "^0.21.0",
+    "sass": "^1.77.2",
+    "vue": "^3.4.21"
+  },
+  "peerDependencies": {
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-dts": "^3.9.1",
     "vue-tsc": "^2.0.6"
   }
 }
