--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "baseUrl" : "./src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./src/*"]
     },
     /* Linting */
     "strict": true,
