--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: yarn/action-setup@v2
+      - uses: npm/action-setup@v2
         with:
           version: 6.0.2
       - run: yarn install
@@ -49,7 +49,7 @@ jobs:
         with:
           node-version: 18
           registry-url: "https://npm.pkg.github.com"
-      - uses: yarn/action-setup@v2
+      - uses: npm/action-setup@v2
         with:
           version: 6.0.2
       - name: download artifact
