--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: yarn/action-setup@v2
+      - uses: npm/action-setup@v2
         with:
           version: 6.0.2
       - run: yarn install
