--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,21 +16,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: npm/action-setup@v2
-        with:
-          version: 6.0.2
       - run: yarn install
       - run: yarn test
   build:
     runs-on: ubuntu-latest
+    needs : test
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: npm/action-setup@v2
-        with:
-          version: 6.0.2
       - run: yarn install
       - run: yarn build
       - name: save build artifact
@@ -49,9 +44,6 @@ jobs:
         with:
           node-version: 18
           registry-url: "https://npm.pkg.github.com"
-      - uses: npm/action-setup@v2
-        with:
-          version: 6.0.2
       - name: download artifact
         uses: actions/download-artifact@v2
         with:
