chore: Update import path for App.vue and styles.css

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,18 +9,8 @@ on:
     types: [created, edited]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: yarn install
-      - run: yarn test
   build:
     runs-on: ubuntu-latest
-    needs : test
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -33,6 +23,16 @@ jobs:
         with:
           name: dist
           path: ./dist
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: yarn install
+      - run: yarn test
   publish-npm:
     runs-on: ubuntu-latest
     permissions:
