--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   ],
   "scripts": {
     "dev": "vite --host",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
+    "build:lib": "vue-tsc && vite build && node buildMD.js",
+    "build:site": "vite build --config web.vite.config.ts ",
     "test": "vitest --environment jsdom"
   },
   "dependencies": {
@@ -35,11 +35,15 @@
     "vue": "3.x"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.1",
     "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.6",
+    "glob": "^10.4.1",
     "happy-dom": "^14.12.0",
+    "highlight.js": "^11.9.0",
     "jsdom": "^24.1.0",
+    "markdown-it": "^14.1.0",
     "sass": "^1.77.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
