--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "vue3-context-menu",
+  "author": {
+    "name": "Uncore",
+    "email": "contactuncor3@gmail.com"
+  },
   "private": true,
   "version": "0.0.0",
   "type": "module",
